--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "nd-express-plugin": "0.0.9",
-    "node-dependency": "^2.0.3"
+    "node-dependency": "^2.0.3",
+    "q": "^1.4.1"
   },
   "node-dependency": {
     "source": "app",
-    "express" : {
-      "port" : 3000,
-      "host" : "localhost"
+    "express": {
+      "port": 3000,
+      "host": "localhost"
     }
   }
 }
